--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.grandParentContaniner{
+  display:table; height:100%; margin: 0 auto;
+}
+
+.parentContainer{
+  display:table-cell; vertical-align:middle;
+}	
+
+.inputStyle{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.buttonStyle{
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.labelsize{
+  font-size: 16px;
+}
+.heading{
+  text-align: left;
+  text-shadow: 2px 2px 5px green;
+}
